grammer/CgrammerParser.py
# Generated from Cgrammer.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CgrammerParser ( Parser ):

    grammarFileName = "Cgrammer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void *memset(void *s, int ch, size_t n)'", 
                     "'size_t strlen(const char *_Str)'", "'int printf( const char *restrict format, ... )'", 
                     "'int scanf(const char *__format, ...)'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'memset'", "'strlen'", "'printf'", "'scanf'", "'int'", 
                     "'float'", "'char'", "'bool'", "'string'", "'const'", 
                     "'if'", "'else'", "'else if'", "'switch'", "'case'", 
                     "'default'", "'for'", "'do'", "'while'", "'break'", 
                     "'continue'", "'return'", "'void'", "'struct'", "'=='", 
                     "'!='", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'>='", "'>'", "'<='", "'<'", "'&&'", "'||'", "'!'", 
                     "'&'", "'|'", "'~'", "'^'", "'<<'", "'>>'", "'...'", 
                     "';'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "MEMSET", "STRLEN", "PRINTF", "SCANF", 
                      "FLOATVALUE", "INTVALUE", "CHARVALUE", "STRINGVALUE", 
                      "BOOLVALUE", "MEMSETFUNC", "STRLENFUC", "PRINTFFUNC", 
                      "SCANFFUNC", "INT", "FLOAT", "CHAR", "BOOL", "STRING", 
                      "CONST", "IF", "ELSE", "ELIF", "SWITCH", "CASE", "DEFAULT", 
                      "FOR", "DO", "WHILE", "BREAK", "CONTINUE", "RETURN", 
                      "VOID", "STRUCT", "EQUAL", "NOTEQUAL", "ASSIGN", "PLUSASSIGN", 
                      "MINUSASSIGN", "MULTIPLYASSIGN", "DIVIDEASSIGN", "MODULOASSIGN", 
                      "SELFPLUS", "SELFMINUS", "PLUS", "MINUS", "MULTIPLYorREFERENCEorPTR", 
                      "DIVIDE", "MODULO", "GEQUAL", "GREATER", "LEQUAL", 
                      "LESS", "AND", "OR", "NOT", "BITANDorADDRESS", "BITOR", 
                      "BITNOT", "BITXOR", "LSHIFT", "RSHIFT", "ELLIPSIS", 
                      "SEMICOLON", "COMMA", "LROUND", "RROUND", "LSQUARE", 
                      "RSQUARE", "LCURLY", "RCURLY", "COLON", "IDENTIFIER", 
                      "WS", "COMMENT" ]

    RULE_announcer = 0
    RULE_pointer_flag = 1
    RULE_type = 2
    RULE_index = 3
    RULE_lib_function = 4
    RULE_variable_declaration = 5
    RULE_params = 6
    RULE_params_definition = 7
    RULE_function_call = 8
    RULE_value = 9
    RULE_expr_unit = 10
    RULE_expr_addr = 11
    RULE_expr_unary = 12
    RULE_expr_calc1 = 13
    RULE_expr_calc2 = 14
    RULE_expr_rop1 = 15
    RULE_expr_rop2 = 16
    RULE_expr_logic = 17
    RULE_expression = 18
    RULE_assignment_operator = 19
    RULE_assignment = 20
    RULE_variable_definition = 21
    RULE_lib_announce = 22
    RULE_function_definition = 23
    RULE_if_block = 24
    RULE_while_block = 25
    RULE_for_block = 26
    RULE_switch_block = 27
    RULE_statement = 28
    RULE_line = 29
    RULE_block = 30
    RULE_code_with_domain = 31
    RULE_code = 32

    ruleNames =  [ "announcer", "pointer_flag", "type", "index", "lib_function", 
                   "variable_declaration", "params", "params_definition", 
                   "function_call", "value", "expr_unit", "expr_addr", "expr_unary", 
                   "expr_calc1", "expr_calc2", "expr_rop1", "expr_rop2", 
                   "expr_logic", "expression", "assignment_operator", "assignment", 
                   "variable_definition", "lib_announce", "function_definition", 
                   "if_block", "while_block", "for_block", "switch_block", 
                   "statement", "line", "block", "code_with_domain", "code" ]

    EOF = Token.EOF
    MEMSET=1
    STRLEN=2
    PRINTF=3
    SCANF=4
    FLOATVALUE=5
    INTVALUE=6
    CHARVALUE=7
    STRINGVALUE=8
    BOOLVALUE=9
    MEMSETFUNC=10
    STRLENFUC=11
    PRINTFFUNC=12
    SCANFFUNC=13
    INT=14
    FLOAT=15
    CHAR=16
    BOOL=17
    STRING=18
    CONST=19
    IF=20
    ELSE=21
    ELIF=22
    SWITCH=23
    CASE=24
    DEFAULT=25
    FOR=26
    DO=27
    WHILE=28
    BREAK=29
    CONTINUE=30
    RETURN=31
    VOID=32
    STRUCT=33
    EQUAL=34
    NOTEQUAL=35
    ASSIGN=36
    PLUSASSIGN=37
    MINUSASSIGN=38
    MULTIPLYASSIGN=39
    DIVIDEASSIGN=40
    MODULOASSIGN=41
    SELFPLUS=42
    SELFMINUS=43
    PLUS=44
    MINUS=45
    MULTIPLYorREFERENCEorPTR=46
    DIVIDE=47
    MODULO=48
    GEQUAL=49
    GREATER=50
    LEQUAL=51
    LESS=52
    AND=53
    OR=54
    NOT=55
    BITANDorADDRESS=56
    BITOR=57
    BITNOT=58
    BITXOR=59
    LSHIFT=60
    RSHIFT=61
    ELLIPSIS=62
    SEMICOLON=63
    COMMA=64
    LROUND=65
    RROUND=66
    LSQUARE=67
    RSQUARE=68
    LCURLY=69
    RCURLY=70
    COLON=71
    IDENTIFIER=72
    WS=73
    COMMENT=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AnnouncerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CgrammerParser.RULE_announcer

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BoolContext(AnnouncerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.AnnouncerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(CgrammerParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(AnnouncerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.AnnouncerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(CgrammerParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class CharContext(AnnouncerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.AnnouncerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CHAR(self):
            return self.getToken(CgrammerParser.CHAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChar" ):
                listener.enterChar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChar" ):
                listener.exitChar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChar" ):
                return visitor.visitChar(self)
            else:
                return visitor.visitChildren(self)


    class FloatContext(AnnouncerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.AnnouncerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(CgrammerParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(AnnouncerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.AnnouncerContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CgrammerParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def announcer(self):

        localctx = CgrammerParser.AnnouncerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_announcer)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                localctx = CgrammerParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(CgrammerParser.INT)
                pass
            elif token in [15]:
                localctx = CgrammerParser.FloatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(CgrammerParser.FLOAT)
                pass
            elif token in [16]:
                localctx = CgrammerParser.CharContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(CgrammerParser.CHAR)
                pass
            elif token in [17]:
                localctx = CgrammerParser.BoolContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.match(CgrammerParser.BOOL)
                pass
            elif token in [18]:
                localctx = CgrammerParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.match(CgrammerParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pointer_flagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULTIPLYorREFERENCEorPTR(self):
            return self.getToken(CgrammerParser.MULTIPLYorREFERENCEorPTR, 0)

        def pointer_flag(self):
            return self.getTypedRuleContext(CgrammerParser.Pointer_flagContext,0)


        def getRuleIndex(self):
            return CgrammerParser.RULE_pointer_flag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer_flag" ):
                listener.enterPointer_flag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer_flag" ):
                listener.exitPointer_flag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer_flag" ):
                return visitor.visitPointer_flag(self)
            else:
                return visitor.visitChildren(self)




    def pointer_flag(self):

        localctx = CgrammerParser.Pointer_flagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pointer_flag)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(CgrammerParser.MULTIPLYorREFERENCEorPTR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(CgrammerParser.MULTIPLYorREFERENCEorPTR)
                self.state = 75
                self.pointer_flag()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CgrammerParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PointerContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def announcer(self):
            return self.getTypedRuleContext(CgrammerParser.AnnouncerContext,0)

        def pointer_flag(self):
            return self.getTypedRuleContext(CgrammerParser.Pointer_flagContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPointer" ):
                listener.enterPointer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPointer" ):
                listener.exitPointer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)


    class OriginalTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def announcer(self):
            return self.getTypedRuleContext(CgrammerParser.AnnouncerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOriginalType" ):
                listener.enterOriginalType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOriginalType" ):
                listener.exitOriginalType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOriginalType" ):
                return visitor.visitOriginalType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = CgrammerParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = CgrammerParser.OriginalTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.announcer()
                pass

            elif la_ == 2:
                localctx = CgrammerParser.PointerContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.announcer()
                self.state = 80
                self.pointer_flag()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSQUARE(self):
            return self.getToken(CgrammerParser.LSQUARE, 0)

        def RSQUARE(self):
            return self.getToken(CgrammerParser.RSQUARE, 0)

        def value(self):
            return self.getTypedRuleContext(CgrammerParser.ValueContext,0)


        def expression(self):
            return self.getTypedRuleContext(CgrammerParser.ExpressionContext,0)


        def function_call(self):
            return self.getTypedRuleContext(CgrammerParser.Function_callContext,0)


        def getRuleIndex(self):
            return CgrammerParser.RULE_index

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex" ):
                listener.enterIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex" ):
                listener.exitIndex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex" ):
                return visitor.visitIndex(self)
            else:
                return visitor.visitChildren(self)




    def index(self):

        localctx = CgrammerParser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(CgrammerParser.LSQUARE)
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 85
                self.value()
                pass

            elif la_ == 2:
                self.state = 86
                self.expression()
                pass

            elif la_ == 3:
                self.state = 87
                self.function_call()
                pass


            self.state = 90
            self.match(CgrammerParser.RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lib_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CgrammerParser.RULE_lib_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StrlenContext(Lib_functionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.Lib_functionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRLENFUC(self):
            return self.getToken(CgrammerParser.STRLENFUC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrlen" ):
                listener.enterStrlen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrlen" ):
                listener.exitStrlen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrlen" ):
                return visitor.visitStrlen(self)
            else:
                return visitor.visitChildren(self)


    class ScanfContext(Lib_functionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.Lib_functionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SCANFFUNC(self):
            return self.getToken(CgrammerParser.SCANFFUNC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScanf" ):
                listener.enterScanf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScanf" ):
                listener.exitScanf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScanf" ):
                return visitor.visitScanf(self)
            else:
                return visitor.visitChildren(self)


    class MemsetContext(Lib_functionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.Lib_functionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MEMSETFUNC(self):
            return self.getToken(CgrammerParser.MEMSETFUNC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemset" ):
                listener.enterMemset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemset" ):
                listener.exitMemset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemset" ):
                return visitor.visitMemset(self)
            else:
                return visitor.visitChildren(self)


    class PrintfContext(Lib_functionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CgrammerParser.Lib_functionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINTFFUNC(self):
            return self.getToken(CgrammerParser.PRINTFFUNC, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf" ):
                listener.enterPrintf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf" ):
                listener.exitPrintf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf" ):
                return visitor.visitPrintf(self)
            else:
                return visitor.visitChildren(self)



    def lib_function(self):

        localctx = CgrammerParser.Lib_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lib_function)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = CgrammerParser.MemsetContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(CgrammerParser.MEMSETFUNC)
                pass
            elif token in [11]:
                localctx = CgrammerParser.StrlenContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(CgrammerParser.STRLENFUC)
                pass
            elif token in [12]:
                localctx = CgrammerParser.PrintfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.match(CgrammerParser.PRINTFFUNC)
                pass
            elif token in [13]:
                localctx = CgrammerParser.ScanfContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.match(CgrammerParser.SCANFFUNC)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CgrammerParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(CgrammerParser.IDENTIFIER, 0)

        def index(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CgrammerParser.IndexContext)
            else:
                return self.getTypedRuleContext(CgrammerParser.IndexContext,i)


        def getRuleIndex(self):
            return CgrammerParser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = CgrammerParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.type_()
            self.state = 99
            self.match(CgrammerParser.IDENTIFIER)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==67:
                self.state = 100
                self.index()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CgrammerParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CgrammerParser.ExpressionContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CgrammerParser.IDENTIFIER)
            else:
                return self.getToken(CgrammerParser.IDENTIFIER, i)

        def BITANDorADDRESS(self, i:int=None):
            if i is None:
                return self.getTokens(CgrammerParser.BITANDorADDRESS)
            else:
                return self.getToken(CgrammerParser.BITANDorADDRESS, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CgrammerParser.COMMA)
            else:
                return self.getToken(CgrammerParser.COMMA, i)

        def getRuleIndex(self):
            return CgrammerParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = CgrammerParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 106
                self.match(CgrammerParser.BITANDorADDRESS)

